# pyhalopsa

./: .gitignore  pyproject.toml
docs/: PROGRESS.md
halopsa/: README.md  __init__.py  __main__.py  _base_client.py  _pagination.py  _transport.py  auth.py  client.py  exceptions.py
halopsa/cli/: __init__.py  _app.py  _config.py  _output.py  _resource_cmd.py
halopsa/cli/commands/: actions.py  agents.py  appointments.py  assets.py  attachments.py  categories.py  clients.py  configure.py  contracts.py  crm_notes.py  expenses.py  invoices.py  items.py  kb_articles.py  opportunities.py  priorities.py  projects.py  quotations.py  releases.py  reports.py  (+14 more)
halopsa/models/: __init__.py  _base.py  _common.py  action.py  agent.py  appointment.py  asset.py  attachment.py  category.py  client_org.py  contract.py  crm_note.py  expense.py  invoice.py  item.py  kb_article.py  opportunity.py  priority.py  project.py  quotation.py  release.py  report.py  site.py  sla.py  software_licence.py  status.py  supplier.py  team.py  ticket.py  ticket_type.py  timesheet.py  top_level.py  user.py  webhook.py  workday.py
halopsa/resources/: __init__.py  _base.py  actions.py  agents.py  appointments.py  assets.py  attachments.py  categories.py  clients.py  contracts.py  crm_notes.py  expenses.py  invoices.py  items.py  kb_articles.py  opportunities.py  priorities.py  projects.py  quotations.py  releases.py  reports.py  sites.py  slas.py  software_licences.py  statuses.py  suppliers.py  teams.py  ticket_types.py  tickets.py  timesheets.py  top_levels.py  users.py  webhooks.py  workdays.py
