[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halopsa"
dynamic = ["version"]
description = "Python SDK and CLI for the HaloPSA REST API"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
halo = "halopsa.cli._app:app"

[tool.hatch.version]
path = "halopsa/_version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'
